#!/usr/bin/env python

# Copyright (c) 2014 Hewlett-Packard Development Company, L.P.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = monasca

# Juno
version = 2014.7

summary = OpenStack Monitoring Service
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    openstack
    monasca
    monasca.anomaly_engine
    monasca.anomaly_engine.processors

data_files =
    /etc/monasca =
        etc/anomaly-engine.yaml
        etc/model_params.json
    /etc/init.d = 
        etc/monasca-anomaly-engine

[entry_points]
console_scripts =
    monasca-anomaly-engine = monasca.anomaly_engine.anomaly_engine:main

[pbr]
warnerrors = True
